feat: improve nested navbar
The NavbarNested comp. now can handle infinite nested level of navbar item.

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 @tailwind utilities;
 
 @layer base {
+  *,
+  ::before,
+  ::after {
+    border-width: 0;
+    border-style: solid;
+  }
+
   /* custom scrollbar */
   ::-webkit-scrollbar {
     width: 20px;
